--- a/packages/starbook/components/RightSidebarPanel.astro
+++ b/packages/starbook/components/RightSidebarPanel.astro
@@ -21,7 +21,7 @@
   }
   .right-sidebar-panel :global(a) {
     display: block;
-    font-size: var(--sb-text-sm);
+    font-size: var(--sb-text-xs);
     text-decoration: none;
     color: var(--sb-color-gray-3);
   }
