--- a/packages/starbook/components/SidebarSublist.astro
+++ b/packages/starbook/components/SidebarSublist.astro
@@ -72,7 +72,7 @@ interface Props {
       font-size: var(--sb-text-base);
     }
     a {
-      font-size: var(--sb-text-sm);
+      font-size: var(--sb-text-xs);
     }
   }
 </style>
