--- a/packages/starbook/components/MobileMenuToggle.astro
+++ b/packages/starbook/components/MobileMenuToggle.astro
@@ -1,20 +1,23 @@
-<button
-  is="starbook-menu-button"
-  aria-expanded="false"
-  aria-label="Menu"
-  aria-controls="starbook__sidebar"
-  class="md:hidden"
->
-  <!-- TODO: Replace with an SVG icon -->
-  <span aria-hidden="true">☰</span>
-</button>
+<starbook-menu-button>
+  <button
+    aria-expanded="false"
+    aria-label="Menu"
+    aria-controls="starbook__sidebar"
+    class="md:hidden"
+  >
+    <!-- TODO: Replace with an SVG icon -->
+    <span aria-hidden="true">☰</span>
+  </button>
+</starbook-menu-button>
 
 <script>
-  class StarbookMenuButton extends HTMLButtonElement {
+  class StarbookMenuButton extends HTMLElement {
+    btn = this.querySelector('button')!;
+
     constructor() {
       super();
       // Toggle `aria-expanded` state when a user clicks the button.
-      this.addEventListener('click', () => this.toggleExpanded());
+      this.btn.addEventListener('click', () => this.toggleExpanded());
 
       // Close the menu when a user presses the escape key.
       const parentNav = this.closest('nav');
@@ -35,14 +38,12 @@
     closeOnEscape(e: KeyboardEvent) {
       if (e.code === 'Escape') {
         this.setExpanded(false);
-        this.focus();
+        this.btn.focus();
       }
     }
   }
 
-  customElements.define('starbook-menu-button', StarbookMenuButton, {
-    extends: 'button',
-  });
+  customElements.define('starbook-menu-button', StarbookMenuButton);
 </script>
 
 <style>
@@ -60,7 +61,7 @@
     cursor: pointer;
   }
 
-  button[aria-expanded='true'] {
+  [aria-expanded='true'] button {
     background-color: var(--sb-color-gray-2);
     color: var(--sb-color-black);
   }
