--- a/packages/starbook/components/MobileMenuToggle.astro
+++ b/packages/starbook/components/MobileMenuToggle.astro
@@ -53,7 +53,7 @@ import Icon from './Icon.astro';
   button {
     position: fixed;
     top: calc((var(--sb-nav-height) - var(--sb-menu-button-size)) / 2);
-    inset-inline-end: 1.5rem;
+    inset-inline-end: var(--sb-nav-pad-x);
     z-index: var(--sb-z-index-navbar);
     border: 0;
     border-radius: 50%;
