--- a/packages/starbook/components/Select.astro
+++ b/packages/starbook/components/Select.astro
@@ -28,7 +28,7 @@ interface Props {
 
 <style>
   label {
-    --sb-icon-size: 0.875rem;
+    --sb-label-icon-size: 0.875rem;
     --sb-caret-size: 1.25rem;
     position: relative;
     display: flex;
@@ -49,7 +49,7 @@ interface Props {
   }
 
   .label-icon {
-    font-size: var(--sb-icon-size);
+    font-size: var(--sb-label-icon-size);
     inset-inline-start: 0;
   }
 
@@ -61,7 +61,7 @@ interface Props {
   select {
     border: 0;
     padding-block: 0.625rem;
-    padding-inline: calc(var(--sb-icon-size) + 0.25rem)
+    padding-inline: calc(var(--sb-label-icon-size) + 0.25rem)
       calc(var(--sb-caret-size) + 0.25rem);
     width: 6.5rem;
     background-color: transparent;
