--- a/packages/starbook/components/LanguageSelect.astro
+++ b/packages/starbook/components/LanguageSelect.astro
@@ -27,6 +27,7 @@ function localizedPathname(locale: string | undefined): string {
           selected: code === Astro.props.locale,
           label: locale!.label,
         }))}
+        width="7em"
       />
     </starbook-lang-select>
   )
