--- a/packages/starbook/components/Layout.astro
+++ b/packages/starbook/components/Layout.astro
@@ -36,12 +36,12 @@ import MobileMenuToggle from './MobileMenuToggle.astro';
     inset-block-start: 0;
     width: 100%;
     height: var(--sb-nav-height);
-    border-bottom: 1px solid var(--sb-color-black);
+    border-bottom: 1px solid var(--sb-color-hairline-shade);
     padding: var(--sb-nav-pad-y) var(--sb-nav-pad-x);
     padding-inline-end: calc(
       var(--sb-nav-pad-x) * 2 + var(--sb-menu-button-size)
     );
-    background-color: var(--sb-color-gray-6);
+    background-color: var(--sb-color-bg-nav);
   }
 
   .sidebar-pane {
@@ -74,8 +74,8 @@ import MobileMenuToggle from './MobileMenuToggle.astro';
     .sidebar-pane {
       --sb-sidebar-visibility: visible;
       width: var(--sb-sidebar-width);
-      background-color: var(--sb-color-gray-6);
-      border-inline-end: 1px solid var(--sb-color-black);
+      background-color: var(--sb-color-bg-sidebar);
+      border-inline-end: 1px solid var(--sb-color-hairline-shade);
     }
 
     .main-frame {
