--- a/packages/starbook/components/RightSidebarPanel.astro
+++ b/packages/starbook/components/RightSidebarPanel.astro
@@ -9,7 +9,7 @@
     padding: 1rem;
   }
   .right-sidebar-panel + .right-sidebar-panel {
-    border-top: 1px solid var(--sb-color-gray-5);
+    border-top: 1px solid var(--sb-color-hairline);
   }
   .container {
     width: var(--sb-sidebar-width);
