Style code blocks

--- a/packages/starbook/components/MarkdownContent.astro
+++ b/packages/starbook/components/MarkdownContent.astro
@@ -56,4 +56,10 @@
   .content :global(h6) {
     font-size: var(--sb-text-h6);
   }
+  .content :global(pre) {
+    border: 1px solid var(--sb-color-gray-5);
+    padding: 0.75rem 1rem;
+    font-size: var(--sb-text-code);
+  }
+
 </style>
