--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -4,6 +4,7 @@ import { getCollection } from 'astro:content';
 import config from 'virtual:starbook/user-config';
 
 import './style/props.css';
+import './style/shiki.css';
 import './style/reset.css';
 import './style/util.css';
 
