--- a/packages/starbook/components/MarkdownContent.astro
+++ b/packages/starbook/components/MarkdownContent.astro
@@ -56,10 +56,20 @@
   .content :global(h6) {
     font-size: var(--sb-text-h6);
   }
+  .content :global(code) {
+    background-color: var(--sb-color-bg-inline-code);
+    margin-block: -0.125rem;
+    padding: 0.125rem 0.375rem;
+  }
+
   .content :global(pre) {
     border: 1px solid var(--sb-color-gray-5);
     padding: 0.75rem 1rem;
     font-size: var(--sb-text-code);
+  }
+
+  .content :global(pre code) {
+    all: unset;
   }
 
 </style>
