--- a/packages/starbook/components/MarkdownContent.astro
+++ b/packages/starbook/components/MarkdownContent.astro
@@ -56,6 +56,14 @@
   .content :global(h6) {
     font-size: var(--sb-text-h6);
   }
+
+  .content :global(a) {
+    color: var(--sb-color-text-accent);
+  }
+  .content :global(a:hover) {
+    color: var(--sb-color-white);
+  }
+
   .content :global(code) {
     background-color: var(--sb-color-bg-inline-code);
     margin-block: -0.125rem;
