--- a/packages/starbook/components/PrevNextLinks.astro
+++ b/packages/starbook/components/PrevNextLinks.astro
@@ -55,6 +55,7 @@ const isRtl = dir === 'rtl';
     border-radius: 0.5rem;
     padding: 1rem;
     text-decoration: none;
+    color: var(--sb-color-gray-2);
   }
   [rel='next'] {
     justify-content: end;
