--- a/packages/starbook/components/MarkdownContent.astro
+++ b/packages/starbook/components/MarkdownContent.astro
@@ -1,39 +1,47 @@
 <div class="content"><slot /></div>
 
 <style>
-  .content :global(* + *) {
+  .content
+    :global(
+      :not(a, strong, em, del, span, input)
+        + :not(a, strong, em, del, span, input)
+    ) {
     margin-top: 1.5rem;
   }
 
-  .content :global(li + li) {
+  /* Headings after non-headings have more spacing. */
+  .content :global(:not(h1, h2, h3, h4, h5, h6) + :is(h1, h2, h3, h4, h5, h6)) {
+    margin-top: 2.5rem;
+  }
+
+  .content :global(li + li),
+  .content :global(dt + dt),
+  .content :global(dt + dd),
+  .content :global(dd + dd) {
     margin-top: 0.25rem;
   }
 
-  .content :global(h1),
-  .content :global(h2),
-  .content :global(h3),
-  .content :global(h4),
-  .content :global(h5),
-  .content :global(h6) {
+  .content
+    :global(
+      li > :last-child:not(li, ul, ol):not(a, strong, em, del, span, input)
+    ) {
+    margin-bottom: 1.25rem;
+  }
+
+  .content :global(dt) {
+    font-weight: 700;
+  }
+  .content :global(dd) {
+    padding-inline-start: 1rem;
+  }
+
+  .content :global(:is(h1, h2, h3, h4, h5, h6)) {
     color: var(--sb-color-white);
     line-height: var(--sb-line-height-headings);
     font-weight: 600;
   }
 
-  .content :global(* + h1),
-  .content :global(* + h2),
-  .content :global(* + h3),
-  .content :global(* + h4),
-  .content :global(* + h5),
-  .content :global(* + h6) {
-    margin-top: 2.5rem;
-  }
-
-  .content :global(img),
-  .content :global(picture),
-  .content :global(video),
-  .content :global(canvas),
-  .content :global(svg) {
+  .content :global(:is(img, picture, video, canvas, svg)) {
     display: block;
     max-width: 100%;
   }
