Add Markdown syntax page for easy dev testin

--- a/packages/starbook/components/MarkdownContent.astro
+++ b/packages/starbook/components/MarkdownContent.astro
@@ -41,7 +41,7 @@
     font-weight: 600;
   }
 
-  .content :global(:is(img, picture, video, canvas, svg)) {
+  .content :global(:is(img, picture, video, canvas, svg, iframe)) {
     display: block;
     max-width: 100%;
   }
