Tidy up page footer

--- a/packages/starbook/components/ContentPanel.astro
+++ b/packages/starbook/components/ContentPanel.astro
@@ -13,4 +13,8 @@
     max-width: var(--sb-content-width);
     margin-inline-start: auto;
   }
+
+  .container > :global(* + *) {
+    margin-top: 1.5rem;
+  }
 </style>
