--- a/packages/starbook/components/LastUpdated.astro
+++ b/packages/starbook/components/LastUpdated.astro
@@ -23,6 +23,11 @@ try {
 
 {
   date && (
-    <>Last updated: {date.toLocaleDateString(lang, { dateStyle: 'medium' })}</>
+    <p style="margin-block: 1.5rem; text-align: end; color: var(--sb-color-gray-3);">
+      Last updated:{' '}
+      <time datetime={date.toISOString()}>
+        {date.toLocaleDateString(lang, { dateStyle: 'medium' })}
+      </time>
+    </p>
   )
 }
