--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -4,6 +4,7 @@ import { getCollection } from 'astro:content';
 import config from 'virtual:starbook/user-config';
 
 import './style/props.css';
+import './style/shiki.css';
 import './style/reset.css';
 import './style/util.css';
 
@@ -75,7 +76,7 @@ const prevNextLinks = getPrevNextLinks(sidebar);
       <main id="starbook__overview" data-pagefind-body>
         <ContentPanel>
           <h1
-            style="font-size: var(--sb-text-h1); font-weight: 600; color: var(--sb-color-white);"
+            style="font-size: var(--sb-text-h1); line-height: var(--sb-line-height-headings); font-weight: 600; color: var(--sb-color-white); margin-top: 1rem;"
           >
             {data.title}
           </h1>
